--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,35 +1,35 @@
 h1{
     font-family: 'Cormorant Garamond';
-    font-size: 65px;
+    font-size: 55px;
     font-weight:500;
 }
 
 h2{
-    font-family: 'Montserrat', sans-serif;;
-    font-size: 42px;
+    font-family: 'Cormorant Garamond';
+    font-size: 50px;
     font-weight:500;
 }
 
 h3{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
+    font-family: 'Montserrat', sans-serif;;
+    font-size: 40px;
     font-weight:500;
 }
 
 h4{
     font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
-    font-weight:400;
+    font-size: 28px;
+    font-weight:500;
 }
 
 h5{
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    font-weight:500;
+    font-size: 22px;
+    font-weight:400;
 }
 
 h6{
     font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    font-weight:400;
+    font-size: 18px;
+    font-weight:500;
 }
