fixed: header, fonts

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
 h1{
     font-family: 'Cormorant Garamond';
-    font-size: 55px;
+    font-size: 65px;
     font-weight:500;
 }
 
@@ -11,25 +11,25 @@ h2{
 }
 
 h3{
-    font-family: 'Montserrat', sans-serif;;
-    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
     font-weight:500;
 }
 
 h4{
     font-family: 'Montserrat', sans-serif;
-    font-size: 28px;
+    font-size: 24px;
     font-weight:500;
 }
 
 h5{
     font-family: 'Montserrat', sans-serif;
-    font-size: 22px;
+    font-size: 18px;
     font-weight:400;
 }
 
 h6{
     font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     font-weight:500;
 }
