--- a/css/core.css
+++ b/css/core.css
@@ -14,10 +14,16 @@ article{
     background-color: #4A455C;
 }
 
-.blog-post{
-    display: grid;
+.blog{
+    display: flex;
+    flex-direction: row;
     max-width: 900px;
     margin-top: 200px;
+}
+
+blog-post{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 p{
@@ -26,24 +32,29 @@ p{
     font-weight:400;
 }
 
+img{
+    width: 100%;
+    height: auto;
+}
+
 menu{
     display: inline-block;
     padding: 14px;
     text-decoration: none;
 }
 
-ul {
+ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
   
-li {
+li{
     float: left;
 }
   
-li a {
+li a{
     display: inline-block;
     text-align: center;
     padding: 14px 16px;
@@ -59,6 +70,7 @@ body{
 
 .colored-button1{
     background-color: #d64c31;
+    color: #FFFFFF;
     border:none;
     padding: 15px 32px;
     text-align: center;
@@ -69,12 +81,7 @@ body{
     cursor: pointer;
 }
 
-  img{
-    width: 100%;
-    height: auto;
-  }
-
-  .uncolored-button{
+.uncolored-button{
     background-color: #ffffff;
     border:none;
     border-style: solid;
@@ -86,4 +93,68 @@ body{
     font-size: 18px;
     margin: 4px 2px;
     cursor: pointer;
-  }
+}
+
+.related-post{
+    background-color: #FFF0E7;
+}
+
+.footer{
+    background-color: #d64c31;
+    float: left;
+    display: block;
+    padding: 30px 50px 40px;
+    height: auto;
+    text-align: left;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.mailing-list{
+    background-color: #4A455C;
+    width: 35%;
+
+}
+
+.colored-button2{
+    background-color: #FFF0E7;
+    font-family: 'Montserrat', sans-serif;
+    border:none;
+    border-style: solid;
+    border-width: thin;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 3px;
+    box-shadow: 1px 2px 10px;
+}
+
+#social-media{
+    color: #ffffff;
+
+}
+
+input{
+    height: 35px;
+    font-family: 'Montserrat', sans-serif;
+    color: #7C7D98;
+    border-radius: 3px;
+    border:none;
+}
+
+.info{
+    padding: auto;
+    justify-content: center;
+}
+
+.image-responsive{
+    max-width: 20%;
+    height: auto;
+}
+
+.about-us{
+    background-color: #7C7D98;
+}
