--- a/css/core.css
+++ b/css/core.css
@@ -65,7 +65,6 @@ body{
     max-width: 900px;
     margin: auto;
     background: white;
-    padding: 10px;
 }
 
 .colored-button1{
@@ -101,19 +100,18 @@ body{
 
 .footer{
     background-color: #d64c31;
-    float: left;
-    display: block;
     padding: 30px 50px 40px;
-    height: auto;
     text-align: left;
-    width: 100%;
     overflow-x: hidden;
 }
 
 .mailing-list{
     background-color: #4A455C;
-    width: 35%;
-
+    position: absolute;
+    padding: 50px 35px 10px;
+    max-width: 320px;
+    bottom: 0;
+    right: 55px;
 }
 
 .colored-button2{
