--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,40 @@
-@media screen and (max-width: 480px) { 
-    /* CSS Code for when the screen size is 480px Screen size */
-    div {
-        width: 25%;
-        height: 50%;
+@media screen and (max-width: 860px) {
+    .mailing-list {
+        position: unset;
+        max-width: none;
+    }
+}
+
+@media screen and (max-width: 820px) { 
+    .first-item {
+        margin-right: 0;
+    }
+
+    #menu > ul > li {
+        font-size: 14px;
+    }
+
+    .nav-logo img {
+        max-width: 160px;
+    }
+}
+
+@media screen and (max-width: 690px) {
+    .top-box {
+        float: none;
+        width: auto;
+        padding: 20px;
+        max-height: none;
+        bottom: 0;
+    }
+}
+
+@media screen and (max-width: 518px) { 
+    .blog-container {
+        display: block;
+    }
+
+    .related-posts__container{
+        display: block; 
     }
 }
