--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,34 +1,54 @@
-h1{
+#eggplant {
+    color: #4A455C;
+}
+
+#lavender {
+    color: #7C7D98;
+}
+
+#bright-red {
+   color: #d64c31; 
+}
+
+#white-rose{
+    color: #FFF0E7;
+}
+
+#white {
+    color: #FFFFFF;
+}
+
+h1 {
     font-family: 'Cormorant Garamond';
     font-size: 65px;
     font-weight:500;
 }
 
-h2{
+h2 {
     font-family: 'Cormorant Garamond';
     font-size: 50px;
     font-weight:500;
 }
 
-h3{
+h3 {
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     font-weight:500;
 }
 
-h4{
+h4 {
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     font-weight:500;
 }
 
-h5{
+h5 {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight:400;
 }
 
-h6{
+h6 {
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     font-weight:500;
